# saga-example

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml
.ci/: docker-compose.yaml
order-service/: pyproject.toml
user-service/: .env.example  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
user-service/.ci/: Dockerfile  entrypoint.sh
user-service/user_service/: config.py  environment.py  main.py
user-service/user_service/application/common/interfaces/: commiter.py
user-service/user_service/application/user/: dto.py  filters.py
user-service/user_service/application/user/interactors/: create.py  delete_one.py  get_many.py  get_one.py
user-service/user_service/application/user/interfaces/: repository.py
user-service/user_service/domain/common/: error.py
user-service/user_service/domain/user/: entity.py  exceptions.py
user-service/user_service/infrastructure/db/: commiter.py
user-service/user_service/infrastructure/db/mongo/: client.py  commiter.py
user-service/user_service/infrastructure/db/mongo/filters/: base.py  build.py
user-service/user_service/infrastructure/db/mongo/user/: __ini__.py  converters.py  filters.py  repository.py
user-service/user_service/main/: config.py  environment.py
user-service/user_service/presentation/api/handlers/: error_handler.py
user-service/user_service/presentation/api/handlers/user/: filters.py  responses.py  router.py  schemas.py
user-service/user_service/presentation/http/: requests.py  router.py
