[project]
name = "user-service"
version = "0.1.0"
description = ""
authors = [{ name = "vedaka1", email = "vladik.kuleshov.2003@mail.ru" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pymongo (>=4.14.1,<5.0.0)",,
]

[dependency-groups]
test = ["pytest>=8.4.1,<9"]
dev = [
    "mypy>=1.17.1,<2",
    "pre-commit>=4.3.0,<5",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
filter_files=true
skip_glob = ["migrations/*"]
skip_gitignore = true

[tool.ruff]
exclude = [
    "venv",
    ".venv",
    ".vscode",
]
line-length = 120
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.mypy]
pretty = true
files = 'user_service/'
disable_error_code = [
    "import-untyped",
    "return",
    "misc"
]
